@@ -265,6 +265,7 @@
 	- python: don't remap NOKEY/UNTRUSTED to OK.
 	- beecrypt: change local absolute symbols to defines for prelinking.
 	- update ru.po.
+	- fix: handle NOKEY/NOTTRUSTED returns as if OK, always return header.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
